--- a/AdminUI/Web.config
+++ b/AdminUI/Web.config
@@ -37,13 +37,23 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="WarmHome" connectionString="Data Source=.;Initial Catalog=WarmHome;User ID=sa;Password=Jiwanyue521" providerName="System.Data.SqlClient" />
+      <add name="WarmHome" connectionString="Data Source=47.93.190.176;Initial Catalog=WarmHome;User ID=sa;Password=jiwanyue521." providerName="System.Data.SqlClient"/>
+	  <!--<add name="WarmHome" connectionString="Data Source=.;Initial Catalog=WarmHome;User ID=sa;Password=Jiwanyue521"  providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-    <sessionState sqlConnectionString="server=.;database=WarmHome;uid=sa;pwd=Jiwanyue521" allowCustomSqlDatabase="true" mode="SQLServer" timeout="1000"></sessionState>
+    <sessionState mode= "InProc" cookieless="false" timeout="20" /> 
+    <!--<sessionState sqlConnectionString="server=.;database=WarmHome;uid=sa;pwd=Jiwanyue521" allowCustomSqlDatabase="true" mode="SQLServer" ></sessionState>-->
   </system.web>
+      <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <remove statusCode="404" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/Error/PageNotFound" />
+      <remove statusCode="500" />
+      <error statusCode="500" responseMode="ExecuteURL" path="/Error/HttpError500" />
+    </httpErrors>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
